objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>RMA</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TAC</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agent_Satisfaction_Score__c</fullName>
        <label>Agent Satisfaction Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Asset.Price</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <label>Customer Satisfaction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Call_Closure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if a case is closed directly after opening</inlineHelpText>
        <label>First Call Closure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Response_Time_In_Min__c</fullName>
        <formula>TEXT(FLOOR((First_Response_Time__c - CreatedDate)*1440))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Time (In Min)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <inlineHelpText>This field displays when was the first response added by the agent on case</inlineHelpText>
        <label>First Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Asset.SBQQ__OrderProduct__r.OrderId,  Asset.SBQQ__OrderProduct__r.Order.OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Asset.Product2Id ,  Asset.Product2.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>Asset.Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Internal_Id__c</fullName>
        <label>RMA Internal Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <description>If the result shows 5.52 then the resolution time can be read as 5 days and 0.52 hours. 0.5*24 = 12 hours &amp; 0.02*24*60 (total minutes in a 24 hour period) = 28 minutes</description>
        <formula>(ClosedDate - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AC_Contact_Id__c</fullName>
        <description>The Contact ID that Amazon Connects assigns to a call. Should only be set by the call flows through the Lambda Functions.</description>
        <externalId>true</externalId>
        <label>Amazon Connect Contact Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>BasicQueue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BasicQueue</label>
        <queue>BasicQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Email Queue</label>
        <queue>Email_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Service_Case_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.REASON</columns>
        <filterScope>Queue</filterScope>
        <label>Service Case</label>
        <queue>Service_Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Dispute</fullName>
        <active>true</active>
        <businessProcess>TAC</businessProcess>
        <description>This is to create a dispute case with TKWW</description>
        <label>Dispute</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMA</fullName>
        <active>false</active>
        <businessProcess>RMA</businessProcess>
        <label>RMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>TAC</fullName>
        <active>false</active>
        <businessProcess>TAC</businessProcess>
        <label>TAC</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>